# FlowHub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  UI_DESIGN_REVIEW.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.iflow/: iflowork.json
.iflow/agents/: rust-pro.md
.xinliu/: config.json
docs/plans/: 2026-02-28-refactor-modularization-design.md  2026-02-28-refactor-modularization.md  2026-03-10-agents-dedup-design.md  2026-03-13-context-usage-display-codex-final.md  2026-03-13-context-usage-display-design.md  2026-03-13-context-usage-display-final.md  2026-03-13-context-usage-display.md  2026-03-15-context-usage-compress-confirm-design.md  2026-03-15-context-usage-position-design.md  2026-03-16-capability-center-a-to-b-structure-draft.md  2026-03-16-capability-center-review-iflow-k25.md  2026-03-16-capability-center-review-opencode-glm5.md  2026-03-16-capability-center-review.md  2026-04-12-task-activity-visibility.md
docs/releases/: 2026-04-13-v1.0.0-github-release.md  2026-04-13-v1.0.0-release-checklist.md
scripts/: clean-dev.js  clean-dev.sh
src/: config.ts  dom.ts  main.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artifact.rs  commands.rs  dialog.rs  git.rs  history.rs  main.rs  manager.rs  model_resolver.rs  models.rs  router.rs  runtime_env.rs  state.rs  storage.rs
src-tauri/src/agents/: iflow_adapter.rs  mod.rs  qwen_adapter.rs  session_params.rs
src/features/: app.ts  contextUsage.test.ts  contextUsage.ts  contextUsagePlacement.test.ts  (+4 more)
(+78 files in other folders)
