[package]
name = "iflow-workspace"
version = "0.3.3"
description = "Multi-Agent Desktop App for iFlow"
authors = ["iFlow Workspace Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
time = "=0.3.36"
once_cell = "1"

[[bin]]
name = "iflow-workspace"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
