[package]
name = "iflow-workspace"
version = "1.0.0"
description = "Flow Hub desktop app powered by Qwen"
authors = ["iFlow Workspace Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
time = "=0.3.36"
once_cell = "1"

[[bin]]
name = "iflow-workspace"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
